--- a/src/components/carrierCover.css
+++ b/src/components/carrierCover.css
@@ -1,3 +1,6 @@
 .example {
-    min-height: 95vh;
+    min-height: 92vh;
+    background-image: url('../assets/bg2.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
