--- a/src/components/carrierCover.css
+++ b/src/components/carrierCover.css
@@ -1,6 +1,5 @@
-.example {
-    min-height: 92vh;
-    background-image: url('../assets/bg2.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-}
+ .hero {
+     min-height: 80vh;
+     /* background-image: url('../assets/bg3.jpeg'); */
+     background-color: #F7F7F7;
+ }
