--- a/src/components/carrierCover.css
+++ b/src/components/carrierCover.css
@@ -1,4 +1,18 @@
  .hero {
-     min-height: 80vh;
-     background-color: #F7F7F7;
+    background: linear-gradient(to bottom, #26262780 50rem, transparent 10rem),
+    url(https://scontent.fclq2-1.fna.fbcdn.net/o1/v/t0/f1/m340/genai_m4_vll_ftw_v3:upload_img_31920735_09_11_2024_19_39_26_391554_8006443340027996941.jpeg?_nc_ht=scontent.fclq2-1.fna.fbcdn.net&_nc_cat=107&ccb=9-4&oh=00_AYDogKGxIhng4-7MtmtgXRxwGT2qnxBmUC1i4lukDS2sug&oe=66E43B84&_nc_sid=5b3566);
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+ }
+
+ .transport-name {
+    color: white;
+    font-weight: 700;
+ }
+
+ .transport-slogan {
+    color: white;
+    font-weight: 450;
+    font-size: 1.2rem;
  }
